// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataAccessReportsDetailsPanel /> renders DataAccessReports detailsPanel 1`] = `
<styled.div
  id="dtpanel-data-access-reports"
>
  Mock Child
  <DetailHeader
    onActionButtonClick={[Function]}
    open={true}
    text=" Users"
    userHasUpdatePermission={true}
  />
  <_class2
    deleteSubEntity={[Function]}
    fields={Array []}
    items={
      Array [
        Object {
          "firstName": "mockFirstName",
          "id": "mockId",
          "lastName": "mockLastName",
          "name": "mockName",
          "status": "enabled",
        },
      ]
    }
    tableType="sidePanel"
    userHasUpdatePermission={true}
  />
</styled.div>
`;

exports[`<DataAccessReportsDetailsPanel /> renders DataAccessReports detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-data-access-reports"
>
  Mock Child
  <DetailHeader
    onActionButtonClick={[Function]}
    open={true}
    text=" Users"
    userHasUpdatePermission={false}
  />
  <_class2
    deleteSubEntity={[Function]}
    fields={Array []}
    items={
      Array [
        Object {
          "firstName": "mockFirstName",
          "id": "mockId",
          "lastName": "mockLastName",
          "name": "mockName",
          "status": "enabled",
        },
      ]
    }
    tableType="sidePanel"
    userHasUpdatePermission={false}
  />
</styled.div>
`;
